<resources>
    <string name="app_name">Quadratic_Formula</string>
    <string name="click">Click here to go to quad form!</string>
    <string name="title_activity_math">MathActivity</string>
    <string name="Enter">Enter  your values for A, B, and C:</string>
    <string name="A">A =</string>
    <string name="B">B =</string>
    <string name="C">C =</string>
    <string name="Go">Go!</string>
    <string name="Result1">Result1: </string>
    <string name="Result2">Result2: </string>


</resources>
