<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathActivity">

    <EditText
        android:id="@+id/Enter"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Enter" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="269dp"
        android:background="#E2F80B"
        android:text="@string/Go" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:ems="10"
        android:hint="@string/A"
        android:inputType="numberSigned" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="224dp"
        android:ems="10"
        android:hint="@string/B"
        android:inputType="numberSigned" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:hint="@string/C"
        android:inputType="numberSigned" />

</RelativeLayout>